--- a/index.html
+++ b/index.html
@@ -11,24 +11,36 @@
             color: #333; /* Cor de texto mais suave */
             display: flex; /* Habilita Flexbox para layout */
             justify-content: center; /* Centraliza o conteúdo horizontalmente */
+            flex-direction: column; /* Organiza os elementos em coluna */
+            align-items: center; /* Centraliza os elementos verticalmente */
         }
 
         /* Estilo da caixa central que contém a calculadora e a caixa de informações */
-        .container, .info-box {
+        .container, .info-box, .results-container {
             background-color: white;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
             margin: 10px;
+            width: 600px; /* Largura fixa para manter a consistência */
         }
 
-        /* Tamanho máximo para a calculadora e a caixa de informações */
-        .container {
-            max-width: 600px;
+        .results-container {
+            display: flex;
+            justify-content: space-between;
         }
 
-        .info-box {
-            max-width: 300px;
+        .result-box {
+            padding: 10px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 10px;
+            flex-basis: 45%;
+        }
+
+        .result-box h3 {
+            color: #1565C0;
+            margin-bottom: 10px;
         }
 
         /* Estilização dos inputs, botão e seletor */
@@ -60,10 +72,10 @@
         }
 
         /* Estilo para o resultado */
-        #resultado {
-            font-size: 18px;
+        .result-text {
+            font-size: 16px;
             color: #1565C0; /* Cor de destaque */
-            margin-top: 15px;
+            margin-top: 5px;
         }
 
         /* Estilo para os links e texto na caixa de informações */
@@ -81,32 +93,68 @@
         }
     </style>
     <script>
-        // Função para calcular o lucro do CDB com base nos dados fornecidos
-        function calcularLucro() {
-            // Captura dos valores inseridos pelo usuário
+  function calcularLucro() {
             var valorCDB = parseFloat(document.getElementById('valorCDB').value) / 100;
             var valorInvestido = parseFloat(document.getElementById('valorInvestido').value);
             var tempo = parseFloat(document.getElementById('tempo').value);
             var cdi = parseFloat(document.getElementById('cdi').value) / 100;
             var periodo = document.getElementById('periodo').value;
 
-            // Validação para garantir que todos os valores sejam válidos e positivos
             if (isNaN(valorCDB) || isNaN(valorInvestido) || isNaN(tempo) || isNaN(cdi) || tempo <= 0) {
                 alert("Por favor, insira valores válidos e positivos.");
                 return;
             }
 
-            // Ajusta o cálculo do ganho total com base na seleção de meses ou anos
             var ganhoBrutoAnual = cdi * valorCDB;
-            var ganhoTotal;
-            if (periodo === 'anos') {
-                ganhoTotal = valorInvestido * (1 + ganhoBrutoAnual) ** tempo - valorInvestido;
-            } else {
-                ganhoTotal = valorInvestido * (1 + ganhoBrutoAnual / 12) ** tempo - valorInvestido;
-            }
+            var ganhoTotal = calcularGanhoTotal(valorInvestido, ganhoBrutoAnual, tempo, periodo);
+            var impostoRenda = calcularImpostoRenda(tempo, periodo, ganhoTotal);
+            var lucroLiquido = ganhoTotal - impostoRenda;
 
-            // Exibição do resultado
-            document.getElementById('resultado').innerText = 'Lucro obtido aproximado: R$ ' + ganhoTotal.toFixed(2);
+            var projecaoTexto = '<strong>Projeções Futuras:</strong><br>';
+            for (var i = 1; i <= 4; i++) {
+                var valorFuturo = calcularValorFuturo(valorInvestido, ganhoBrutoAnual, i, 'meses');
+                projecaoTexto += 'Mês ' + i + ': R$ ' + valorFuturo.toFixed(2) + '<br>';
+            }
+            projecaoTexto += '1 ano: R$ ' + calcularValorFuturo(valorInvestido, ganhoBrutoAnual, 1, 'anos').toFixed(2) + '<br>';
+            projecaoTexto += '2 anos: R$ ' + calcularValorFuturo(valorInvestido, ganhoBrutoAnual, 2, 'anos').toFixed(2);
+
+            document.getElementById('resultado').innerHTML = 
+                'Lucro obtido aproximado sem descontos: R$ ' + ganhoTotal.toFixed(2) +
+                '<br>Lucro obtido com descontos: R$ ' + lucroLiquido.toFixed(2) +
+                '<br>Descontos: IR (' + ((impostoRenda / ganhoTotal) * 100).toFixed(2) + '%)';
+            document.getElementById('projecao').innerHTML = projecaoTexto;
+        }
+
+        function calcularGanhoTotal(valorInvestido, ganhoBrutoAnual, tempo, periodo) {
+            if (periodo === 'anos') {
+                return valorInvestido * (1 + ganhoBrutoAnual) ** tempo - valorInvestido;
+            } else {
+                return valorInvestido * (1 + ganhoBrutoAnual / 12) ** tempo - valorInvestido;
+            }
+        }
+
+        function calcularImpostoRenda(tempo, periodo, ganhoTotal) {
+            var aliquotaIR;
+            if (periodo === 'anos') {
+                tempo *= 12; // Converte anos para meses
+            }
+            if (tempo <= 180) {
+                aliquotaIR = 0.225;
+            } else if (tempo <= 360) {
+                aliquotaIR = 0.20;
+            } else if (tempo <= 720) {
+                aliquotaIR = 0.175;
+            } else {
+                aliquotaIR = 0.15;
+            }
+            return ganhoTotal * aliquotaIR;
+        }
+
+        function calcularValorFuturo(valorInvestido, ganhoBrutoAnual, tempo, periodo) {
+            if (periodo === 'anos') {
+                tempo *= 12; // Converte anos para meses
+            }
+            return valorInvestido * (1 + ganhoBrutoAnual / 12) ** tempo - valorInvestido;
         }
     </script>
 </head>
@@ -131,8 +179,19 @@
         <input type="number" id="cdi" placeholder="12.35">
 
         <button onclick="calcularLucro()">Calcular Lucro</button>
-        <p id="resultado"></p>
     </div>
+
+    <div class="results-container">
+        <div class="result-box">
+            <h3>Resultado do Investimento</h3>
+            <p id="resultado" class="result-text"></p>
+        </div>
+        <div class="result-box">
+            <h3>Projeção para 4 Meses Adicionais</h3>
+            <p id="projecao" class="result-text"></p>
+        </div>
+    </div>
+
     <div class="info-box">
         <h3>Informações Úteis</h3>
         <p><a href="https://investidor10.com.br/indices/cdi/" target="_blank">CDI Atual</a></p>
@@ -143,12 +202,9 @@
 CDI atual atualizado em dezembro: 12,34%
 <br>
 <br>
-
-
             <br>
 
-
-        </p>
+        </p> 
     </div>
 </body>
 </html>
